# test

./: generate_qr_video.py  qr_frame_diff_gui.py
license_viewer/: CMakeLists.txt  LicenseViewer.cpp  LicenseViewer.h  README.md  license_example.md  main.cpp
src/: main.rs
